manifests/idam/ldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap
  namespace: auth
  labels:
    app: ldap
    tier: backend
spec:
  selector:
    app: ldap
    tier: backend
  ports:
    - name: ldap
      protocol: TCP
      port: 389
      targetPort: 389
    - name: ldaps-tcp
      protocol: TCP
      port: 636
      targetPort: 636
    - name: ldaps
      protocol: UDP
      port: 636
      targetPort: 636
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-deployment
  namespace: auth
  labels:
    app: ldap
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ldap
        tier: backend
    spec:
      containers:
      - name: ldap
        image: osixia/openldap
        args: ["--copy-service"]
        ports:
        - containerPort: 389
          name: ldap
        - containerPort: 636
          name: ldaps
        volumeMounts:
        - name: ldap-data
          mountPath: /var/lib/ldap
        - name: ldap-config
          mountPath: /etc/ldap/slapd.d
        - name: ldap-certs
          mountPath: /container/service/slapd/assets/certs
        - name: memberof-config
          mountPath: /container/service/slapd/assets/config/bootstrap/ldif/custom/memberOf.ldif
          subPath: memberOf.ldif
        - name: container-run
          mountPath: /container/run
      volumes:
      - name: ldap-data
        persistentVolumeClaim:
          claimName: ldap-data-pv-claim
      - name: ldap-config
        persistentVolumeClaim:
          claimName: ldap-config-pv-claim
      - name: ldap-certs
        persistentVolumeClaim:
          claimName: ldap-certs-pv-claim
      - name: memberof-config
        configMap:
          name: memberof-config
      - name: container-run
        emptyDir: {}
